--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "the-movies-hub",
-  "version": "0.1.0",
+  "name": "movieshub",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "https://patelhit125.github.io/movieshub/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
-    "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.2.0",
     "react-lazy-load-image-component": "^1.5.1",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-youtube": "^7.14.0",
+    "read-more-react": "^1.0.10",
     "simple-react-lightbox": "^3.6.9-0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
