--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "movieshub",
-  "version": "1.0.0",
+  "name": "the-movies-hub",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://patelhit125.github.io/movieshub/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "cjs-loader": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
