--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-paginate": "^8.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
